--- a/ergasia2-server/pom.xml
+++ b/ergasia2-server/pom.xml
@@ -12,6 +12,11 @@
             <artifactId>gson</artifactId>
             <version>2.2.4</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.35</version>
+        </dependency>
     </dependencies>
         
     <properties>
