- Trying to create the sockets. - Added support for properties file. - Add main classes to pom file. - Rename the project ergasia2 to ergasia2-client.

--- a/ergasia2-client/pom.xml
+++ b/ergasia2-client/pom.xml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    
     <groupId>gr.unipi</groupId>
-    <artifactId>ergasia2-server</artifactId>
+    <artifactId>ergasia2-client</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     
-    <name>ergasia2-server</name>
+    <name>ergasia2-client</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mainClass>gr.unipi.mainpackage.server.StartUp</mainClass>
+        <mainClass>gr.unipi.mainpackage.client.StartUp</mainClass>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-        
+    
     <dependencies>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.2.4</version>
-        </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
