--- a/ergasia2-client/pom.xml
+++ b/ergasia2-client/pom.xml
@@ -23,5 +23,11 @@
             <version>1.2.17</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3.1</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
