- Log location changed. - Docs added in Greek language.

--- a/ergasia2-server/settings.properties
+++ b/ergasia2-server/settings.properties
@@ -3,7 +3,7 @@
 server.port=55555
 
 # Configure session.
-session.expireMinutes = 60000
+session.expireMilis = 60000
 
 # General.
 server.allowWithLogin = true
